--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="https://storage.googleapis.com/flashvolve/AGROFEL/products/logo-automacao.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://unpkg.com/plyr@3/dist/plyr.css" rel="stylesheet" />
+    <link href="./src/style.css" rel="stylesheet" />
     
     <title>flash [Automação Criativa]</title>
     <style>
