styles: change bg color from all application on index.html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     
     <title>flash [Automação Criativa]</title>
     <style>
+      html {
+        background-color: #001c7d;
+      } 
+
       :root {
         --plyr-color-main: #001c7d;
         --plyr-audio-controls-background: #f1f1f1;
